feat(vscode-ext): implement stateful locale management system
Adds runtime locale switching and graceful fallback (mirrors LogManager pattern).
Extension auto-detects VSCode language at startup, enabling future multi-language support.

Why this change:
- Hardcoded messagesEn in formatMessage was not stateful
- No runtime locale switching capability
- Needed locale override for testing
- Required automated completeness validation

Key features:
- Stateful management: setLocale('en') switches runtime locale (mirrors LogManager)
- Auto-initialization: Extension startup detects VSCode language ('en-US' → 'en')
- Graceful fallback: Missing translations warn + fallback to English (Option C)
- Testing support: formatMessage(code, params, 'fr') overrides locale
- Automated validation: Tests ensure all locales have complete MessageCode coverage
- Type-safe: LocaleCode type ('en' | 'fr' | ...) prevents typos

API surface:
- setLocale(locale: string): Sets locale, handles 'en-US' → 'en' extraction
- getMessages(): Returns current locale's message map
- getCurrentLocale(): Returns current locale code
- formatMessage(code, params?, localeOverride?): Optional testing override

Benefits:
- Runtime locale switching (like LogManager pattern)
- Future-ready: Easy to add fr/es/etc locales
- Testable: Override locale in tests without changing global state
- Automated validation: CI catches incomplete translations
- Better UX: English fallback instead of errors

--- a/docs/I18N.md
+++ b/docs/I18N.md
@@ -298,16 +298,7 @@ vscode.window.showInformationMessage(message);
 - Remove ERR*/WARN* codes from RangeLinkMessageCode
 - Result: Clean separation between errors and messages
 
-### Phase 5 - i18n Implementation
-
-- Create `src/i18n/` folder structure
-- Implement `getMessage()` function
-- Create English message map (`messages.en.ts`)
-- Implement `LocaleManager` for core layer
-- Update extension layer to inject locale
-- Replace inline messages with `getMessage()` calls
-- Add tests for template formatting
-- Add tests for locale fallback
+### Phase 5 - i18n Implementation (See [#37](https://github.com/couimet/rangeLink/issues/37))
 
 ### Phase 6 - Additional Languages (Future)
 
