[issues/274] Remove ROADMAP.md and JOURNEY.md - migrate to GitHub issues
## Summary

Removes the legacy ROADMAP.md and JOURNEY.md files, replacing all documentation references with links to GitHub issues. This completes the migration to GitHub issues as the single source of truth for tracking planned work.

## Changes

- Delete `docs/ROADMAP.md` (14k) and `docs/JOURNEY.md` (94k)
- Delete obsolete `.claude/commands/migrate-roadmap-item.md`
- Update README "What's Next" section to link to GitHub issues
- Remove ROADMAP references from 15 documentation files
- Create #298 for the one actionable ROADMAP item (unsaved file warning)

## Test Plan

- [x] All existing tests pass (1341 tests)
- [x] No new tests needed (documentation-only changes)
- [x] Verified no broken links remain to deleted files

## Documentation

- [x] CHANGELOG.md: Not needed - internal docs cleanup, not user-facing
- [x] README.md: Updated to point to GitHub issues

## Related

- Closes #274
- Closes #152 (Deprecate ROADMAP.md)
- Creates #298 (unsaved file warning - migrated from ROADMAP)

--- a/docs/I18N.md
+++ b/docs/I18N.md
@@ -25,7 +25,7 @@ RangeLink's i18n system enables localized informational messages while keeping e
 - `MSG_CONFIG_USING_DEFAULTS` → "Using default delimiter configuration"
 - `MSG_BYOD_PARSED` → "Portable link parsed successfully"
 
-**Note:** ✅ Phase 4.5J Complete (2025-11-05): `RangeLinkMessageCode` now uses descriptive values matching keys exactly (e.g., `CONFIG_LOADED = 'CONFIG_LOADED'`). See [ROADMAP.md Phase 4.5J](./ROADMAP.md#45j-convert-rangelinkmessagecode-to-descriptive-values--complete).
+**Note:** ✅ Phase 4.5J Complete (2025-11-05): `RangeLinkMessageCode` now uses descriptive values matching keys exactly (e.g., `CONFIG_LOADED = 'CONFIG_LOADED'`).
 
 **Coverage Insight:** When i18n is implemented, `RangeLinkMessageCode` will achieve natural test coverage as each locale's translation map must be `Record<RangeLinkMessageCode, string>`, ensuring all enum keys are tested. TypeScript will enforce completeness, and missing keys will cause compilation errors. We'll then be able to remove the `src/types/RangeLinkMessageCode.ts` exception in `jest.config.js` file.
 
